# effective-software-testing

./: .gitignore  .marprc.yml  .pre-commit-config.yaml  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  _config.yml  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  slides.yml
assets/css/: style.scss
doc/: api.rst  conf.py  index.rst
docs/: index.md
docs/assets/css/: style.scss
effective_software_testing/: __init__.py  __main__.py  board.py  board_widget.py  engine.py  gui.py  player.py
effectivesoftwaretesting/: __init__.py  __main__.py
notebooks/: demo.ipynb  prototyping.ipynb
slides/: index.md  ssc.css
src/effective_software_testing/: __main__.py  board.py  engine.py  player.py
tests/: conftest.py  test_board.py  test_board_property.py  test_board_widget.py  test_cli.py  test_effective_software_testing.py  test_effectivesoftwaretesting.py  test_engine.py  test_gui.py
