[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "effective_software_testing"
description = "Example code from the SSC compact course Effective Software Testing"
readme = "README.md"
maintainers = [
    { name = "Liam Keegan", email = "liam.keegan@iwr.uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click",
    "numpy",
    "PyQt6"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "pytest-qt",
    "pytest-xvfb",
    "ipytest",
    "hypothesis",
]

# Command line scripts installed as part of the installation
[project.scripts]
tic-tac-toe = "effective_software_testing.__main__:main"

[tool.hatch]
version.path = "src/effective_software_testing/__init__.py"
